force-app/main/default/objects/SAC_MaestroAccionesReclamacion__c/SAC_MaestroAccionesReclamacion__c.object-meta.xml
<CustomObject>
    <description>Objeto maestro parametrizable de acciones sobre las Reclamaciones y pretensiones</description>
    <label>Maestro Acciones Reclamación</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Nombre de la Acción</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Maestro Acciones de Reclamaciones</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>