force-app/main/default/objects/SAC_MaestroAccionesReclamacion__c/fields/SAC_Activo__c.field-meta.xml
<CustomField>
    <fullName>SAC_Activo__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check para marcar si la tarea está activa o no.</description>
    <label>Activo</label>
    <type>Checkbox</type>
</CustomField>