force-app/main/default/objects/SAC_MaestroAccionesReclamacion__c/fields/SAC_Descripcion__c.field-meta.xml
<CustomField>
    <fullName>SAC_Descripcion__c</fullName>
    <description>Campo para guardar la descripción de la Acción</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Descripción</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>