force-app/main/default/objects/SAC_MaestroAccionesReclamacion__c/fields/SAC_DeveloperName__c.field-meta.xml
<CustomField>
    <fullName>SAC_DeveloperName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Developer Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>