force-app/main/default/objects/SAC_MaestroAccionesReclamacion__c/fields/SAC_EquipoResponsable__c.field-meta.xml
<CustomField>
    <fullName>SAC_EquipoResponsable__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Equipo responsable de las acciones</description>
    <label>Equipo responsable</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>(1 AND 2 AND 4) OR (3 AND 2 AND 5)</booleanFilter>
        <filterItems>
            <field>CC_Grupo_Colaborador__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Grupo Responsable de la acción</value>
        </filterItems>
        <filterItems>
            <field>CC_Grupo_Colaborador__c.SAC_PermiteTareas__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>CC_Grupo_Colaborador__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Grupo de tareas</value>
        </filterItems>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>equals</operation>
            <value>Maestro Acciones</value>
        </filterItems>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>equals</operation>
            <value>Maestro acciones SPV</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>CC_Grupo_Colaborador__c</referenceTo>
    <relationshipLabel>Maestro Acciones de Reclamaciones</relationshipLabel>
    <relationshipName>Maestro_Acciones_de_Reclamaciones</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>