force-app/main/default/objects/SAC_MaestroAccionesReclamacion__c/fields/SAC_PlazoMaximo__c.field-meta.xml
<CustomField>
    <fullName>SAC_PlazoMaximo__c</fullName>
    <description>Campo para guardar el plazo máximo duración en días (TME)</description>
    <label>Plazo máximo (Días)</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>