force-app/main/default/objects/SAC_MaestroAccionesReclamacion__c/fields/SAC_Prorroga__c.field-meta.xml
<CustomField>
    <fullName>SAC_Prorroga__c</fullName>
    <description>Campo para guardar la prórroga (duración en días) - siempre la misma duración de días que el TME</description>
    <label>Días de Prórroga</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>