force-app/main/default/objects/SAC_MaestroAccionesReclamacion__c/recordTypes/SAC_MaestroAcciones.recordType-meta.xml
<RecordType>
    <fullName>SAC_MaestroAcciones</fullName>
    <active>true</active>
    <description>Maestro de acciones para el proyecto de SAC Reclamaciones.</description>
    <label>Maestro Acciones</label>
</RecordType>