force-app/main/default/objects/SAC_MaestroAccionesReclamacion__c/recordTypes/SPV_MaestroAcciones.recordType-meta.xml
<RecordType>
    <fullName>SPV_MaestroAcciones</fullName>
    <active>true</active>
    <description>Maestro de acciones de supervisores</description>
    <label>Maestro acciones SPV</label>
</RecordType>