force-app/main/default/objects/SAC_MaestroAccionesReclamacion__c/listViews/SAC_TodasAcciones.listView-meta.xml
<ListView>
    <fullName>SAC_TodasAcciones</fullName>
    <columns>NAME</columns>
    <columns>SAC_Descripcion__c</columns>
    <columns>SAC_EquipoResponsable__c</columns>
    <columns>SAC_PlazoMaximo__c</columns>
    <columns>SAC_Prorroga__c</columns>
    <columns>SAC_Activo__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todas las acciones</label>
    <sharedTo>
        <group>SAC_GrupoAdministradoresApp</group>
    </sharedTo>
</ListView>